tests/errors/preprocessor/019_branch.c.expect
./tests/errors/preprocessor/019_branch.c:1:3: error: unterminated #if
1 | #if 0
      ^
